fullSandbox11072023/force-app/main/default/objects/Territory_Master__c/Territory_Master__c.object-meta.xml
<CustomObject>
    <label>Territory Master</label>
    <nameField>
        <label>Territory Key</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Territory Master</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>