fullSandbox11072023/force-app/main/default/objects/Territory_Master__c/fields/Build_Empty_Quotas__c.field-meta.xml
<CustomField>
    <fullName>Build_Empty_Quotas__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Build Empty Quotas</label>
    <type>Checkbox</type>
</CustomField>