fullSandbox11072023/force-app/main/default/objects/Territory_Master__c/fields/Check_Sales_and_Primary_Email__c.field-meta.xml
<CustomField>
    <fullName>Check_Sales_and_Primary_Email__c</fullName>
    <formula>AND(
NOT(ISBLANK(Sales_Rep_Email__c)),
NOT(ISBLANK(Primary_Territory_User_Email__c)),
Sales_Rep_Email__c = Primary_Territory_User_Email__c

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Checked if Sales Rep and Primary Sales Rep email addresses match</inlineHelpText>
    <label>Check Sales and Primary Email</label>
    <type>Checkbox</type>
</CustomField>