fullSandbox11072023/force-app/main/default/objects/Territory_Master__c/fields/Compensation_Profile__c.field-meta.xml
<CustomField>
    <fullName>Compensation_Profile__c</fullName>
    <label>Compensation Profile</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Alt Care</fullName>
            </value>
            <value>
                <fullName>Alt Care ISR</fullName>
            </value>
            <value>
                <fullName>Alt Care Urology</fullName>
            </value>
            <value>
                <fullName>Anesthesia</fullName>
            </value>
            <value>
                <fullName>Anesthesia Canada</fullName>
            </value>
            <value>
                <fullName>Anesthesia Military Rep</fullName>
            </value>
            <value>
                <fullName>Australia\NZ</fullName>
            </value>
            <value>
                <fullName>DTAC IS</fullName>
            </value>
            <value>
                <fullName>EM</fullName>
            </value>
            <value>
                <fullName>EMISR</fullName>
            </value>
            <value>
                <fullName>Interventional</fullName>
            </value>
            <value>
                <fullName>Interventional Access Canada</fullName>
            </value>
            <value>
                <fullName>Interventional Capital</fullName>
            </value>
            <value>
                <fullName>Interventional ISR</fullName>
            </value>
            <value>
                <fullName>Interventional ISR CA</fullName>
            </value>
            <value>
                <fullName>INTV Coronary</fullName>
            </value>
            <value>
                <fullName>INTV MCS</fullName>
            </value>
            <value>
                <fullName>INTV Structural Heart</fullName>
            </value>
            <value>
                <fullName>Latin America</fullName>
            </value>
            <value>
                <fullName>Military</fullName>
            </value>
            <value>
                <fullName>Military Rep</fullName>
            </value>
            <value>
                <fullName>National Accounts</fullName>
            </value>
            <value>
                <fullName>New Zealand</fullName>
            </value>
            <value>
                <fullName>Resp/Uro/AltCare - Canada</fullName>
            </value>
            <value>
                <fullName>Respiratory</fullName>
            </value>
            <value>
                <fullName>Respiratory Inside Sales</fullName>
            </value>
            <value>
                <fullName>SBM Pain Management</fullName>
            </value>
            <value>
                <fullName>Surgical Bariatrics</fullName>
            </value>
            <value>
                <fullName>Surgical Canada</fullName>
            </value>
            <value>
                <fullName>Surgical Disposables</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>