fullSandbox11072023/force-app/main/default/objects/Territory_Master__c/fields/Director_Name__c.field-meta.xml
<CustomField>
    <fullName>Director_Name__c</fullName>
    <inlineHelpText>Do NOT set this on the Sales Rep - it will not do anything. 

Set this on Director Territories Only or RSM Managers/Territories like EMS that do not have a Director.</inlineHelpText>
    <label>Director Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>