fullSandbox11072023/force-app/main/default/objects/Territory_Master__c/fields/Director_Territory_Number_Workflow__c.field-meta.xml
<CustomField>
    <fullName>Director_Territory_Number_Workflow__c</fullName>
    <formula>if(ISBLANK(Director_Name__c),
Parent_Territory__r.Region_Number__c,
Territory_Number__c
)</formula>
    <label>Director Territory Number Workflow</label>
    <type>Text</type>
</CustomField>