fullSandbox11072023/force-app/main/default/objects/Territory_Master__c/fields/Disable_Lead_Routing__c.field-meta.xml
<CustomField>
    <fullName>Disable_Lead_Routing__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When checked this territory will not be used to route leads (using ZPSA).</inlineHelpText>
    <label>Disable Lead Routing</label>
    <type>Checkbox</type>
</CustomField>