fullSandbox11072023/force-app/main/default/objects/Territory_Master__c/fields/Force_Open_Territory_Name__c.field-meta.xml
<CustomField>
    <fullName>Force_Open_Territory_Name__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Used to force Sales Rep Name to use the Open Territory name</inlineHelpText>
    <label>Force Open Territory Name</label>
    <type>Checkbox</type>
</CustomField>