fullSandbox11072023/force-app/main/default/objects/Territory_Master__c/fields/ICM_Last_Update__c.field-meta.xml
<CustomField>
    <fullName>ICM_Last_Update__c</fullName>
    <label>ICM Last Update</label>
    <type>DateTime</type>
</CustomField>