fullSandbox11072023/force-app/main/default/objects/Territory_Master__c/fields/ICM_Maintenance_Key__c.field-meta.xml
<CustomField>
    <fullName>ICM_Maintenance_Key__c</fullName>
    <label>ICM Maintenance Key</label>
    <length>50</length>
    <type>Text</type>
</CustomField>