fullSandbox11072023/force-app/main/default/objects/Territory_Master__c/fields/ICM_Territory_Debug__c.field-meta.xml
<CustomField>
    <fullName>ICM_Territory_Debug__c</fullName>
    <description>Used to debug when ICM Hierarchy Territory Update occurs and territories have users and are missing rep or manager email, or have rep and manager email and are missing territories.</description>
    <formula>IF(
AND(
ISBLANK(Sales_Rep_Email__c),ISBLANK(Manager_Email__c),User_Count__c&gt;0),&quot;Missing Rep and Manager Email&quot;,

IF(
AND(
(NOT(ISBLANK(Sales_Rep_Email__c))),ISBLANK(Manager_Email__c),User_Count__c&gt;0),&quot;Missing Manager Email&quot;,

IF(
AND(
ISBLANK(Sales_Rep_Email__c),(NOT(ISBLANK(Manager_Email__c))),User_Count__c&gt;0),&quot;Missing Rep Email&quot;,

IF(
AND(
(NOT(ISBLANK(Sales_Rep_Email__c))),(NOT((ISBLANK(Manager_Email__c)))),User_Count__c=0),&quot;Missing Users&quot;,&quot; &quot;))))</formula>
    <label>ICM Territory Debug</label>
    <type>Text</type>
</CustomField>