fullSandbox11072023/force-app/main/default/objects/Territory_Master__c/fields/Manager__c.field-meta.xml
<CustomField>
    <fullName>Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Territory_Master1</relationshipName>
    <type>Lookup</type>
</CustomField>