fullSandbox11072023/force-app/main/default/objects/Territory_Master__c/fields/Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>Manager_Email__c</fullName>
    <inlineHelpText>This is what looks up and populates the Manager lookup field.</inlineHelpText>
    <label>Manager Email</label>
    <type>Email</type>
</CustomField>