fullSandbox11072023/force-app/main/default/objects/Territory_Master__c/fields/Owner_Email_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Owner_Email_Lookup__c</fullName>
    <description>Apex will lookup the email address from this field and update the owner of this record.</description>
    <label>Owner Email Lookup</label>
    <type>Email</type>
</CustomField>