fullSandbox11072023/force-app/main/default/objects/Territory_Master__c/fields/Parent_Territory__c.field-meta.xml
<CustomField>
    <fullName>Parent_Territory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Territory</label>
    <referenceTo>Territory_Master__c</referenceTo>
    <relationshipLabel>Territory Master</relationshipLabel>
    <relationshipName>Territory_Master</relationshipName>
    <type>Lookup</type>
</CustomField>