fullSandbox11072023/force-app/main/default/objects/Territory_Master__c/fields/Payee_Id__c.field-meta.xml
<CustomField>
    <fullName>Payee_Id__c</fullName>
    <label>Payee Id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>