fullSandbox11072023/force-app/main/default/objects/Territory_Master__c/fields/Payee_Id_Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>Payee_Id_Last_Updated__c</fullName>
    <inlineHelpText>When was the field last updated from the Territory Quota object.</inlineHelpText>
    <label>Payee Id Last Updated</label>
    <type>DateTime</type>
</CustomField>