fullSandbox11072023/force-app/main/default/objects/Territory_Master__c/fields/Primary_Sales_Rep_Flip__c.field-meta.xml
<CustomField>
    <fullName>Primary_Sales_Rep_Flip__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Makes the Primary Sales Rep preferred over Sales Rep which drives Sales and Quota record ownership. Used when ICM cannot be changed but we want a different rep to own related records.
Make Primary Sales Rep Blank if you want the Manager to Own Sales.</inlineHelpText>
    <label>Primary Sales Rep Flip</label>
    <type>Checkbox</type>
</CustomField>