fullSandbox11072023/force-app/main/default/objects/Territory_Master__c/fields/Primary_Territory_User__c.field-meta.xml
<CustomField>
    <fullName>Primary_Territory_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Territory User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Territory_Master2</relationshipName>
    <type>Lookup</type>
</CustomField>