fullSandbox11072023/force-app/main/default/objects/Territory_Master__c/fields/Primary_Territory_User_Email__c.field-meta.xml
<CustomField>
    <fullName>Primary_Territory_User_Email__c</fullName>
    <label>Primary Territory User Email</label>
    <type>Email</type>
</CustomField>