fullSandbox11072023/force-app/main/default/objects/Territory_Master__c/fields/Primary_Territory_User_Role__c.field-meta.xml
<CustomField>
    <fullName>Primary_Territory_User_Role__c</fullName>
    <formula>Primary_Territory_User__r.UserRole.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Territory User Role</label>
    <type>Text</type>
</CustomField>