fullSandbox11072023/force-app/main/default/objects/Territory_Master__c/fields/Region_Number__c.field-meta.xml
<CustomField>
    <fullName>Region_Number__c</fullName>
    <label>Region Number</label>
    <length>64</length>
    <type>Text</type>
</CustomField>