fullSandbox11072023/force-app/main/default/objects/Territory_Master__c/fields/Remove_Empty_Quotas__c.field-meta.xml
<CustomField>
    <fullName>Remove_Empty_Quotas__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Remove Empty Quotas</label>
    <type>Checkbox</type>
</CustomField>