fullSandbox11072023/force-app/main/default/objects/Territory_Master__c/fields/Role_Rank__c.field-meta.xml
<CustomField>
    <fullName>Role_Rank__c</fullName>
    <formula>if(ISPICKVAL(Role__c, &quot;Sales Rep&quot;), 1, 
if(ISPICKVAL(Role__c, &quot;Inside Sales&quot;), 1, 
if(Territory_Number__c = &quot;800205&quot;, 3, 
if(ISPICKVAL(Role__c, &quot;KAM&quot;), 2, 
if(ISPICKVAL(Role__c, &quot;Sales Manager&quot;), 4, 
if(ISPICKVAL(Role__c, &quot;Sales Director&quot;), 5, 
if(ISPICKVAL(Role__c, &quot;Sales VP&quot;), 6, 
1 
)))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Role Rank</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>