fullSandbox11072023/force-app/main/default/objects/Territory_Master__c/fields/Role_Toggle__c.field-meta.xml
<CustomField>
    <fullName>Role_Toggle__c</fullName>
    <description>BKP AN April 04 2020
if(LEFT(Territory_Number__c,3) = &quot;900&quot;, NULL, 
if(Territory_Number__c = &quot;800205&quot;, &quot;DNA&quot;, 
CASE(Role__c, 
&quot;ASR&quot;, &quot;ASR&quot;,
&quot;MDM&quot;, &quot;MDM&quot;, 
&quot;KAM&quot;, &quot;KAM&quot;, 
&quot;Sales Manager&quot;, &quot;RSM&quot;, 
&quot;Sales Director&quot;, &quot;DIR&quot;, 
&quot;Sales VP&quot;, &quot;VP&quot;,
&quot;REP&quot;)
))</description>
    <formula>if(LEFT(Territory_Number__c,3) = &quot;900&quot;, NULL,
if(Territory_Number__c = &quot;800205&quot;, &quot;DNA&quot;,
CASE(Role__c, 
&quot;ASR&quot;, &quot;ASR&quot;,
&quot;MDM&quot;, &quot;MDM&quot;, 
&quot;KAM&quot;, &quot;KAM&quot;, 
&quot;Sales Manager&quot;, &quot;RSM&quot;, 
&quot;Sales Director&quot;, &quot;DIR&quot;, 
&quot;Sales VP&quot;, &quot;VP&quot;,
&quot;REP&quot;)
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Role Toggle</label>
    <type>Text</type>
</CustomField>