fullSandbox11072023/force-app/main/default/objects/Territory_Master__c/fields/Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Territory_Master</relationshipName>
    <type>Lookup</type>
</CustomField>