fullSandbox11072023/force-app/main/default/objects/Territory_Master__c/fields/Sales_Rep_BU_Check__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_BU_Check__c</fullName>
    <formula>if(
AND(
Primary_Sales_Rep_Flip__c = FALSE,
TEXT(Business_Unit__c) &lt;&gt; TEXT(Sales_Rep__r.Business_Unit__c),
NOT(ISBLANK(Sales_Rep__c))
),TRUE,
if(
AND(
TEXT(Business_Unit__c) &lt;&gt; TEXT(Primary_Territory_User__r.Business_Unit__c),
NOT(ISBLANK(Primary_Territory_User__c))
)
,TRUE, 
FALSE
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Rep BU Check</label>
    <type>Checkbox</type>
</CustomField>