fullSandbox11072023/force-app/main/default/objects/Territory_Master__c/fields/Sales_Rep_Email__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_Email__c</fullName>
    <inlineHelpText>This is what looks up and populates the Sales Rep lookup field.</inlineHelpText>
    <label>Sales Rep Email</label>
    <type>Email</type>
</CustomField>