fullSandbox11072023/force-app/main/default/objects/Territory_Master__c/fields/Sharing_Key__c.field-meta.xml
<CustomField>
    <fullName>Sharing_Key__c</fullName>
    <label>Sharing Key</label>
    <length>55</length>
    <type>Text</type>
</CustomField>