fullSandbox11072023/force-app/main/default/objects/Territory_Master__c/fields/Shipping_Street_2__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Street_2__c</fullName>
    <label>Shipping Street 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>