fullSandbox11072023/force-app/main/default/objects/Territory_Master__c/fields/Territory__c.field-meta.xml
<CustomField>
    <fullName>Territory__c</fullName>
    <inlineHelpText>Field used to concatenate the Territory Number with the Primary Territory User Full Name.</inlineHelpText>
    <label>Territory</label>
    <length>255</length>
    <type>Text</type>
</CustomField>