fullSandbox11072023/force-app/main/default/objects/Territory_Master__c/fields/Territory_Name_2__c.field-meta.xml
<CustomField>
    <fullName>Territory_Name_2__c</fullName>
    <label>Territory Name 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>