fullSandbox11072023/force-app/main/default/objects/Territory_Master__c/fields/Territory_Number__c.field-meta.xml
<CustomField>
    <fullName>Territory_Number__c</fullName>
    <externalId>true</externalId>
    <label>Territory Number</label>
    <length>64</length>
    <required>true</required>
    <type>Text</type>
</CustomField>