fullSandbox11072023/force-app/main/default/objects/Territory_Master__c/fields/Territory_Short_Name__c.field-meta.xml
<CustomField>
    <fullName>Territory_Short_Name__c</fullName>
    <label>Territory Short Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>