fullSandbox11072023/force-app/main/default/objects/Territory_Master__c/fields/Territory_User_Active__c.field-meta.xml
<CustomField>
    <fullName>Territory_User_Active__c</fullName>
    <formula>Manager__r.IsActive</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Territory User Active</label>
    <type>Checkbox</type>
</CustomField>