fullSandbox11072023/force-app/main/default/objects/Territory_Master__c/fields/Tickle_Quota_s__c.field-meta.xml
<CustomField>
    <fullName>Tickle_Quota_s__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Does an update on all related quota&apos;s so that they will pickup any territory changes.</inlineHelpText>
    <label>Tickle Quota&apos;s</label>
    <type>Checkbox</type>
</CustomField>