fullSandbox11072023/force-app/main/default/objects/Territory_Master__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <formula>IF(ISBLANK(Region_Number__c),&quot;RSM&quot;,&quot;REP&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type</label>
    <type>Text</type>
</CustomField>