fullSandbox11072023/force-app/main/default/objects/Territory_Master__c/fields/Update_Open_Opportunity_Owner__c.field-meta.xml
<CustomField>
    <fullName>Update_Open_Opportunity_Owner__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check to change the Owner of all Open Opportunities related to this Territory based on Sales Rep and Primary Sales Rep. The field Primary Sales Rep Flip must also be checked to fire this update and the Primary Sales Rep field must not be null.</inlineHelpText>
    <label>Update Open Opportunity Owner</label>
    <type>Checkbox</type>
</CustomField>