fullSandbox11072023/force-app/main/default/objects/Territory_Master__c/fields/Update_Territory_Alignments__c.field-meta.xml
<CustomField>
    <fullName>Update_Territory_Alignments__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this Checkbox TRUE to regenerate the Territory Alignment Rules. This will generate a batch job to recreate all Territory Alignments and will email you when completed. Don&apos;t check this if you don&apos;t know what this means.</inlineHelpText>
    <label>Rebuild Territory Alignments</label>
    <type>Checkbox</type>
</CustomField>