fullSandbox11072023/force-app/main/default/objects/Territory_Master__c/fields/User_Count__c.field-meta.xml
<CustomField>
    <fullName>User_Count__c</fullName>
    <label>User Count</label>
    <summaryForeignKey>Territory_User__c.Territory_Master__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>