fullSandbox11072023/force-app/main/default/objects/Territory_Master__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Territory_Number__c</columns>
    <columns>NAME</columns>
    <columns>Territory_Name__c</columns>
    <columns>Region_Number__c</columns>
    <columns>Region_Name__c</columns>
    <columns>Business_Unit__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>