fullSandbox11072023/force-app/main/default/objects/Territory_Master__c/listViews/Test_TM_view.listView-meta.xml
<ListView>
    <fullName>Test_TM_view</fullName>
    <columns>NAME</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>Sales_Rep__c</columns>
    <columns>Sales_Rep_Name__c</columns>
    <columns>Primary_Territory_User_Name__c</columns>
    <columns>SalesRepID__c</columns>
    <columns>Manager_Name__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Primary_Sales_Rep_Flip__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>UPDATEDBY_USER</field>
        <operation>equals</operation>
        <value>Grant Smith</value>
    </filters>
    <label>Grant Recently Modified</label>
</ListView>